fixed some styling issue with the nav, not displaying unless user scrolls down on mobile screens

--- a/sass/base/_base.sass
+++ b/sass/base/_base.sass
@@ -1,8 +1,11 @@
 html
+  max-width: 100vw
+  max-height: 100vh
   scroll-behavior: smooth
 
 body
-  max-with: 100%
+  max-width: 100%
+  max-height: 100%
   height: auto
   box-sizing: border-box
   margin: 0
