--- a/sass/layouts/_layout.sass
+++ b/sass/layouts/_layout.sass
@@ -1,7 +1,8 @@
 main
   max-width: 100vw
-  width: 100%
-  height: auto
+  max-height: 100vh
+  width: 100vw
+  height: 100vh
   display: grid
   grid-template-columns: 10% 1fr 1fr 10%
   grid-template-rows: 1fr
@@ -15,9 +16,10 @@ section, header
 
 .header-section
   grid-area: header
+  max-width: 100%
   width: 100%
   max-height: 94vh
-  height: 94vh
+  height: auto
   color: $tertiary-color
 
 .header-wrapper p
